         settings.dat,sound.cpp,ui/options.dat: add emulation of the Fuller Box
         (feature request #1764994) (Stuart & Fred).
20090608 sound.[cpp|h],sound/{alsasound.c,coreaudiosound.c,sdlsound.c}: allow
         sound to run from 2% speed up (patch #2799477) (Fred).
20090610 Makefile.am,ay.[ch],fuse.c,joystick.[ch],kempmouse.c,
         machines/{spec16.c,spec48.c,tc2048.c},man/fuse.1,melodik.[ch],
         periph.[ch],settings.dat,sound.cpp,ui/options.dat: add emulation of
         the Melodik and similar AY interfaces (feature request #1841501)
         (Fred).
20090611 sound.cpp: correct AY capability check (thanks, Stuary Brady) (Fred).
20090613 sound.cpp: ACB stereo fixes (Fred).
20090613 man/fuse.1,sound.cpp,ui/options.dat: tweak sound output options based
         on listening tests against real hardware, narrow options to a default
         similar to MIC output and one similar to the internal beeper (Fred).
20090613 disk/disk.c: support non-standard TRD images with 41-83 tracks per
         side (fixes bug #2805766) (Gergely Szasz).
20090625 display.[ch],machines/{pentagon.c,pentagon1024.c,pentagon512.c,
         scorpion.c,spec128.c,spec16.c,spec48.[ch],spec_se.c,specplus2.c,
         specplus2a.c,specplus3.c,specplus3e.c,tc2048.c,tc2068.[ch]},
         memory.[ch]: add support for Pentagon 1024SL v2.2 16 colour mode
         (Fred).
20090627 compat.h,compat/unix/file.c,compat/wii/{Makefile.am,file.c}: switch
         UNIX file compat routines to use the C standard file I/O, switch Wii
         to use the UNIX file routines (patch #2808481) (Gergely Szasz).
20090627 display.c: mark pentagon_16c_get_colour as inline and static (Fred).
20090706 machines/pentagon1024.c: initialise memory port before doing
         periph_update as that triggers a memory map call (Fred).
20090707 AUTHORS: Add Shay Green (Fred).
20090707 ChangeLog: chuck in a few entries as we go, mostly OS X port visible
         items at the moment (Fred).